# soda-resource-tools

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  ME.md  README.md  _.travis.yml  appveyor.yml  soda_clix_build_release.ps1  soda_clix_build_release.sh  soda_clix_docker_release.ps1  soda_clix_release.ps1  travis.yml
.design/: README.md  moviepilot.plantuml  soda-resource-tools.md  soda_management.plantuml
.github/workflows/: node.js.yml  rust.yml
.soda_resource_tools_server/: .gitignore  README.md  diesel.toml
.soda_resource_tools_server/db/diesel/migrations/2023-08-13_create_management_rule/: down.sql  up.sql
.soda_resource_tools_server/db/diesel/migrations/2023-09-24_create_user/: down.sql  up.sql
.soda_resource_tools_server/src/: config.rs  task.rs  utils.rs
.soda_resource_tools_server/src/api/: filebrowser.rs  setting.rs  user.rs
.soda_resource_tools_server/src/db/: models.rs  schema.rs
.soda_resource_tools_server/src/task/: consumer.rs  entity.rs  schedule.rs  watcher.rs
.soda_resource_tools_webui/config/: defaultSettings.ts  proxy.ts  routes.ts
.soda_resource_tools_webui/src/: access.ts  app.tsx  requestErrorConfig.ts
.soda_resource_tools_webui/src/components/RightContent/: AvatarDropdown.tsx
.soda_resource_tools_webui/src/locales/: en-US.ts
.soda_resource_tools_webui/src/locales/en-US/: menu.ts
.soda_resource_tools_webui/src/locales/zh-CN/: menu.ts
.soda_resource_tools_webui/src/pages/: ManagementRule.tsx  ResourceSetting.tsx
.soda_resource_tools_webui/src/services/soda/: api.ts  typings.d.ts
ci/: install.sh
soda_cli/: .gitignore  Cargo.toml  README.md
soda_cli/src/: main.rs
soda_cli_config/: soda_config.json  soda_config_rule.json
soda_cli_docker/: .dockerignore  Dockerfile
soda_resource_tools_cli/: .rustfmt.toml  Cargo.toml  README.md
soda_resource_tools_cli/src/: main.rs
soda_resource_tools_lib/: .gitignore  .rustfmt.toml  Cargo.toml  README.md
soda_resource_tools_lib/config/: mt_strong_match_name_map.json  mt_strong_match_regex_rules.json  mt_strong_match_rules.json  mt_strong_match_rules_movie.json  mt_strong_match_rules_tv.json
soda_resource_tools_lib/src/: lib.rs  soda.rs
soda_resource_tools_lib/src/soda/: cache.rs  dom.rs  entity.rs  extension_option.rs  extension_result.rs  fanart.rs  filebrowser.rs  finder.rs  global.rs  meta.rs  request.rs  scraper.rs  tmdb.rs  transfer.rs  utils.rs  watcher.rs
soda_resource_tools_lib/src/soda/fanart/: entity.rs
soda_resource_tools_lib/src/soda/meta/: strong_match_token.rs  token.rs
soda_resource_tools_lib/src/soda/tmdb/: entity.rs  movie.rs  request.rs  scraper.rs  search.rs  tv.rs
soda_resource_tools_lib/src/soda/utils/: encrypt.rs  system.rs  time.rs  token.rs
soda_resource_tools_lib/tests/: config_test.rs  integration_1_soda_test.rs  integration_2_meta_test.rs  integration_meta_test.rs  integration_soda_test.rs  movie_and_tv_metadata.json
soda_resource_tools_lib/tests/test_cache/fanart_http_cache/: db  snap.000000000001A5A9
soda_resource_tools_lib/tests/test_cache/fanart_http_cache/blobs/: 107929  112  128  144  160  176  192  208  96
soda_resource_tools_lib/tests/test_cache/imdb_http_cache/: db  snap.000000000033CDB6
soda_resource_tools_lib/tests/test_cache/imdb_http_cache/blobs/: 1373156  1546510  2198776  2282015  2294097  2299645  2299661  3366691
soda_resource_tools_lib/tests/test_scrape_mt_hardlink_src/: .gitignore
soda_resource_tools_server/: .env  Cargo.toml  Rocket.toml
soda_resource_tools_server/config/: movie_and_tv_item_rules.json  movie_and_tv_match_file_rules.json
soda_resource_tools_server/src/: api.rs  db.rs  global.rs  main.rs
soda_resource_tools_server/src/api/: actions.rs  entity.rs  resource.rs
soda_resource_tools_server/src/db/: table_management_rule_helper.rs  table_user_helper.rs
soda_resource_tools_webui/: .gitignore  README.md  package.json
soda_resource_tools_webui/config/: config.ts
soda_resource_tools_webui/src/: manifest.json
soda_resource_tools_webui/src/components/: index.ts
soda_resource_tools_webui/src/components/Footer/: index.tsx
soda_resource_tools_webui/src/components/HeaderDropdown/: index.tsx
soda_resource_tools_webui/src/components/ManagementRuleModal/: index.tsx
soda_resource_tools_webui/src/components/RightContent/: index.tsx
soda_resource_tools_webui/src/locales/: zh-CN.ts
soda_resource_tools_webui/src/locales/en-US/: pages.ts
soda_resource_tools_webui/src/locales/zh-CN/: pages.ts
soda_resource_tools_webui/src/pages/: Admin.tsx  BasicSetting.tsx  FileBrowser.tsx  Welcome.tsx
soda_resource_tools_webui/src/pages/User/Login/: index.tsx
soda_resource_tools_webui/src/services/soda/: login.ts
soda_resource_tools_webui/src/utils/: authority.ts  file.ts
