[package]
name = "soda_cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
keywords = ["tv or movie scrape", "scrape", "file recognize"]
homepage = "https://github.com/biezhihua/soda-resource-tools"
readme = "https://github.com/biezhihua/soda-resource-tools/blob/main/soda_cli/README.md"

[dependencies]

soda_resource_tools_lib = { path = "../soda_resource_tools_lib", version = "0.1.0"}

# 日志
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "tracing-log",
    "registry",
    "json",
    "chrono",
] }
tracing-appender = "0.2.3"
clap = { version = "4.4.18", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.32"
