[package]
name = "soda_clix"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
keywords = ["scrape"]
homepage = "https://github.com/biezhihua/soda-resource-tools"
documentation = "https://github.com/biezhihua/soda-resource-tools"
repository = "https://github.com/biezhihua/soda-resource-tools"
readme = "README.md"
description = "soda_clix"
authors = ["biezhihua"]
categories = ["command-line-utilities"]

[dependencies]

soda_resource_tools_lib = { path = "../soda_resource_tools_lib", version = "0.1.0"}

# 日志
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "tracing-log",
    "registry",
    "json",
    "chrono",
] }
tracing-appender = "0.2.3"
clap = { version = "4.4.18", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
chrono = "0.4.33"
