# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "soda_resource_tools_lib"
version = "0.1.0"
authors = ["biezhihua"]
edition = "2021"
rust-version = "1.56.0"
license = "GPL-3.0-only"
description = "soda resource tools lib"
documentation = "https://github.com/biezhihua/soda-resource-tools"
homepage = "https://github.com/biezhihua/soda-resource-tools"
repository = "git@github.com:biezhihua/soda-resource-tools.git"
readme = "README.md"
keywords = ["soda", "resource", "tools", "lib"]
categories = ["soda", "resource", "tools", "lib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "soda_resource_tools_lib"
path = "src/lib.rs"

[dependencies]

# 正则 
regex = "1.10.3"

# JSON
serde_json = "1.0.113"
serde = { version = "1.0.195", features = ["derive"] }

# 加密
ring = "0.17.7"
data-encoding = "2.5.0"
rand = "0.8.5"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"

# 时间
chrono = "0.4.32"

# 文件监控
notify = { version = "6.1.1", features = ["serde"] }

# 懒加载
once_cell = { version = "1.19.0", features = [] }

# 网络
reqwest = { version = "0.11.23", features = ["blocking", "json"] }

# 异步
tokio = { version = "1.35.1", features = ["full"] }

# URL编码
urlencoding = "2.1.3"

# 本地存储
sled = "0.34.7"

# XML
xml-rs = "0.8.19"

# bytes
bytes = "1.5.0"

magic-crypt = "3.1.13"

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "tracing-log",
    "registry",
    "json"
] }
